--- a/CSS/invitation & wedding.css
+++ b/CSS/invitation & wedding.css
@@ -68,7 +68,7 @@ html, body, div, span, applet, object, iframe,
 	        color: #FFF;} /*文字顏色值*/
 
 	.wrap {
-		max-width: 1024px;
+		max-width: 1024px; mix-width:480px;
 		margin: 0 auto;
 		font-size: 13pt;
 		font-family: Helvetica Neue,Helvetica,Roboto,Arial,Noto Sans TC,Apple LiGothic,å¾®è»Ÿæ­£é»‘é«”,Microsoft JhengHei,sans-serif;
