--- a/CSS/invitation & wedding.css
+++ b/CSS/invitation & wedding.css
@@ -61,7 +61,8 @@ html, body, div, span, applet, object, iframe,
 	@media screen and(min-width: 960px) and (max-width: 1199px) {css-code;}
 	@media screen and(min-width: 768px) and (max-width: 959px) {css-code;}
 	@media screen and(min-width: 480px) and (max-width: 767px) {css-code;}
-	@media screen and (max-width: 479px) {css-code;}
+	@media screen and(min-width: 320px) and (max-width: 479px) {css-code;}
+	@media screen and (max-width: 319px) {css-code;}
 
 	::selection { /*滑鼠選取文字反白的顏色設定for谷歌*/
 	        background: #516141; /*背景顏色值*/
@@ -231,10 +232,11 @@ html, body, div, span, applet, object, iframe,
 
 
 
-.info, .traffic, .parking{
-	min-width: 320px; 
-	margin: 50px 0px 50px 50px;
+.info, .traffic{
+	max-width:1024px;
+	margin: 50px 0px 50px 95px;
 }
+
 
 
 .traffic li{
@@ -242,9 +244,15 @@ html, body, div, span, applet, object, iframe,
 }
 
 
+
+.traffic iframe{
+	margin: 0px 0px 0px -45px;
+}
+
+
 .parking{
 	min-height:300px;
-
+	margin: 50px 0px 50px 50px;
 }
 
 .parking li{
@@ -254,12 +262,12 @@ html, body, div, span, applet, object, iframe,
 .parkinfo{
  	float: left;
  	padding:45px;
-	margin-right:122px;
+	margin-right:90px;
 
 }
 
 .parking img{
-	min-width: 250px; max-width: 358px;
+	min-width: 200px; max-width: 358px;
  	float: left;
 }
 
