modify amp .map

--- a/CSS/invitation & wedding.css
+++ b/CSS/invitation & wedding.css
@@ -234,7 +234,7 @@ html, body, div, span, applet, object, iframe,
 
 .info, .traffic{
 	max-width:1024px;
-	margin: 50px 0px 50px 95px;
+	margin: 50px 95px;
 }
 
 
@@ -244,9 +244,8 @@ html, body, div, span, applet, object, iframe,
 }
 
 
-
-.traffic iframe{
-	margin: 0px 0px 0px -45px;
+.map{
+	margin: 0px 0px 0px 50px;
 }
 
 
